# csoundAPI_examples

./: README.md
6.x/: README.md
6.x/c/: example1.c  example2.c  example5.c
6.x/clojure/: README.md  example12.clj  example2.clj  example4.clj  example5.clj  example7.clj  example8.clj  example9.clj
6.x/cpp/: CsoundMessageBuffer.cpp  GetSpoutExample.cpp  SetChannelExample.cpp  SimpleCsdPlayback.cpp  StringOrcScoPlayback.cpp  test2.csd  test7.csd  test8.csd
6.x/csharp/: Example1.cs  Example2.cs  Example4.cs  Example6.cs  README.md  RandomLine.cs  csoundAPI_Examples.cs
6.x/go/: example01.go  example02.go  example03.go  example04.go  example05.go  example07.go  example08.go  example10.go  go.sum  test1.csd
6.x/groovy/: Example1.groovy  Example10.groovy  Example12.groovy  Example4.groovy  Example5.groovy  Example6.groovy  Example7.groovy  Example8.groovy  Example9.groovy  README.md
6.x/java/: .gitignore  README.md  build.xml
6.x/jruby/: README.md  example10.rb  example3.rb  example5.rb  example6.rb  example7.rb
6.x/lua/: example1.lua  (+5 more)
7.x/: README.md  test.csd
7.x/c/: CMakeLists.txt  README.md  example1  example1.c  example10.c  example2  example2.c  example3.c  example4.c  example5.c  example6.c  example7.c  example8.c  example9.c  test.aif
c/: CMakeLists.txt  README.md  example1.c  example10.c  example2.c  example3.c  example4.c  example5.c  example6.c  example7.c  example8.c  example9.c
clojure/: example1.clj  example10.clj  example11.clj  example12.clj  example2.clj  example3.clj  example4.clj  example5.clj  example6.clj  example7.clj  example8.clj  example9.clj
cpp/: GenerativeScoreExample.cpp  GetSpoutExample.cpp  GetStringChannelExample.cpp  README.md  SetChannelExample.cpp  SimpleCsdTextPlayback.cpp  csPerfThreadExample.cpp  example1  example1.cpp  example2.cpp  example3.cpp  example7.cpp  example8.cpp  test1.csd
csharp/: Example1.cs  Example3.cs  Example5.cs  Example6.cs  Example7.cs  Example8.cs  Example9.cs  Note.cs  README.md  csoundAPI_Examples.cs
forth/: example1.fs
go/: README.md  example01.go  example02.go  example03.go  example04.go  example05.go  example06.go  example07.go  example08.go  example09.go  example10.go  example13.go  example14.go  go.mod
groovy/: Example1.groovy  Example11.groovy  Example2.groovy  Example3.groovy  Example4.groovy  Example5.groovy  Example6.groovy  Example8.groovy  Example9.groovy
java/: build.xml
jruby/: README.md  example2.rb  example4.rb  example6x.rb  example8.rb  example9.rb
lua/: README.md  example10.lua  example2.lua  example5.lua  example6.lua  example7.lua  example8.lua
python/: CtcsoundAPIExamples.ipynb  README.md  example1.py  example12.py  example2.py  example3.py  example6.py  example7.py  example9.py
racket/: cs6ffi.rkt  example1.rkt
rust/: Cargo.toml  README.md  test1.csd
rust/example1/: Cargo.toml
rust/example1/src/: main.rs
rust/example10/: Cargo.toml
rust/example11/: Cargo.toml
rust/example11/src/: main.rs  simple_ui.rs
rust/example2/: Cargo.toml
rust/example2/src/: main.rs
rust/example3/: Cargo.toml
rust/example3/src/: main.rs
rust/example4/: Cargo.toml
rust/example4/src/: main.rs
rust/example5/: Cargo.toml
rust/example5/src/: main.rs
rust/example6/: Cargo.toml
rust/example6/src/: main.rs
rust/example7/: Cargo.toml
rust/example7/src/: main.rs
rust/example8/: Cargo.toml
rust/example8/src/: main.rs
rust/example9/: Cargo.toml
rust/example9/src/: main.rs
rust/src/: example10.rs  example2.rs  example3.rs  example4.rs  example5.rs  example6.rs  example7.rs  example8.rs  example9.rs
visualbasic/: Csound6API_VBexamples.vbproj  Example1.vb  Example2.vb  Example3.vb  Example4.vb  Example5.vb  Example6.vb  Example7.vb  Module1.vb  Note.vb  RandomLine.vb
(+165 files in other folders)
