[package]
name = "csound_examples"
version = "0.1.0"
authors = ["Natanael Mojica <neithanmo@gmail.com"]
edition = "2018"

[dependencies]
csound = {git = "https://github.com/neithanmo/csound-rs"}
rand = "0.6.4"

[[example]]
name = "example1"
path = "src/example1.rs"

[[example]]
name = "example2"
path = "src/example2.rs"

[[example]]
name = "example3"
path = "src/example3.rs"

[[example]]
name = "example4"
path = "src/example4.rs"

[[example]]
name = "example5"
path = "src/example5.rs"

[[example]]
name = "example6"
path = "src/example6.rs"

[[example]]
name = "example7"
path = "src/example7.rs"

[[example]]
name = "example8"
path = "src/example8.rs"

[[example]]
name = "example9"
path = "src/example9.rs"

[[example]]
name = "example10"
path = "src/example10.rs"
